<resources>
    <string name="app_name">News Finder</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_news">No News Found</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>

    <string name="settings_order_by_newest_news_label">Newest News</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for Order-by Oldest News [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_news_label">Oldest News</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <string name="settings_section_label">Section</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">technology</string>
    <string name="article_title">Article Title</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="read_more"><![CDATA[Read More >]]></string>
</resources>