<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp"
    >
    <ImageView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:id="@+id/img"
        android:padding="10dp"
        android:src="@drawable/ic_launcher_background">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        >
     <TextView
         android:id="@+id/title_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:text="@string/article_title"
         android:textAllCaps="true"
         android:textColor="@color/AuthorColor"
         android:textSize="@dimen/title_size"
         android:textStyle="bold"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
         <TextView
             android:id="@+id/author_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/author"
             android:textColor="@color/black"
             android:textSize="@dimen/sub_size"
             android:layout_marginRight="30dp"
             />
         <TextView
             android:id="@+id/category_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/category"
             android:textColor="@color/black"
             android:textSize="@dimen/sub_size"
             android:layout_marginRight="30dp"
             />
         <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/sub_size"
             />
     </LinearLayout>
    <TextView
        android:id="@+id/read_more_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_more"
        android:layout_gravity="right"
        android:textColor="@color/grey"
        android:textSize="@dimen/title_size"
        />
    </LinearLayout>
</LinearLayout>